---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        If(
            If {
                branches: [
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        body: [
                            If(
                                If {
                                    branches: [
                                        Branch {
                                            cond: GetVar(
                                                GetVar {
                                                    name: "b",
                                                },
                                            ),
                                            body: [
                                                Pass,
                                            ],
                                        },
                                    ],
                                    default: None,
                                },
                            ),
                        ],
                    },
                ],
                default: None,
            },
        ),
    ],
}
